Edit page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Infographics</title>
+<title>Covid-19 Awareness And Prevention</title>
 <style>
 * {
   margin: 0;
